plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.nativenavs'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web' // MVC, Tomcat, Jackson, etc...
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'    // MVC

// DB
	runtimeOnly 'com.h2database:h2'    // h2
	runtimeOnly 'com.mysql:mysql-connector-j'    // mysql
	implementation 'org.mybatis:mybatis:3.5.9'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'    // jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'    // mongodb
// redis 추가 예정

// security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

// Email Verification
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'jakarta.mail:jakarta.mail-api:2.0.1'
	implementation 'com.sun.mail:jakarta.mail:2.0.1' // 사용 중인 버전으로 설정

// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // or jjwt-gson, jjwt-orgjson

// tools
	compileOnly 'org.projectlombok:lombok'    // @Getter, @Setter, etc...
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'    // Auto Build, LiveReload, etc...

// websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:stomp-websocket:2.3.3-1'
	implementation 'javax.annotation:javax.annotation-api:1.3.2'    //Postruct
	implementation 'org.webjars:sockjs-client:1.0.2'

// Front
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // View
	implementation 'org.webjars:webjars-locator-core'
	implementation 'org.webjars:bootstrap:3.3.7'
	implementation 'org.webjars:jquery:3.1.1-1'

// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

//JASYPT
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
//S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//firebase
	implementation 'com.google.firebase:firebase-admin:9.2.0'

}


tasks.named('test') {
	useJUnitPlatform()
}